--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@ Hyperpost
 <span id="tagline">Tu blog de confianza :3</span>
 </div>
 <div id="post">
-<h1>El Blog de prueba de Enyer</h1>
+<h1>El Blog de prueba de Enyer Rangel</h1>
 <p>Esta es la sala principal de reuniones de SitioUno</p>
 <p><img src="imagenes/equipo.jpg" width="100%" /></p>
 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
